--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include README.rst LICENSE AUTHORS runtests.py
 recursive-include dbsettings/templates *.html
+recursive-include dbsettings/static *
 recursive-include dbsettings/locale *.mo *.po
