Adding Admin form CSS

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.rst LICENSE AUTHORS
 exclude runtests.py
 recursive-include dbsettings/templates *.html
+recursive-include dbsettings/static *
 recursive-include dbsettings/locale *.mo *.po
